# solana_ticket_mngt

./: .gitignore  README.md  faucet-keypair.json  package-lock.json  package.json
api/: .gitignore  API.md  README.md  idl.js  index.js  package.json  postman_collection.json  swagger.yaml
api/auth/: index.js
api/db/: index.js
api/model/: index.js  schema.js
api/routes/: auth.js  index.js  tickets.js
api/scripts/: get-wallet-key.js
api/services/: solana.js
api/test/: api.test.js  full-test.js  mint.test.js  ticket.test.js
solanacontract/: .env  Anchor.toml  Cargo.toml  package-lock.json  package.json  test-wallet.json
solanacontract/.cargo/: config.toml
solanacontract/programs/solanacontract/: Cargo.toml
solanacontract/programs/solanacontract/src/: lib.rs
solanacontract/programs/ticket_resell/: Cargo.toml
solanacontract/programs/ticket_resell/src/: lib.rs
solanacontract/tests/: solanacontract.ts
