[workspace]
resolver = "2"
members = [
    "programs/ticket_resell",
    "programs/solanacontract"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = "=0.29.0"
solana-program = "=1.16.27"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
debug = true
overflow-checks = true

[profile.test]
opt-level = 3
debug = true 